@@ -152,3 +152,5 @@ Version 0.0.1:
 151/ Added debuff texture.
 152/ Added Unforgiving.
 153/ Made projectile critical always crit system more aligned with the mod current always crit system.
+154/ Added in "Lower visual quality" config for player that reach toward endgame.
+155/ Made Shattered Sky not affected by attack speed
